<resources>
    <string name="app_name">FoodOrderApplication</string>
    <string name="description">picture</string>
    <string name="name">Food Order Application</string>
    <string name="author">Hung Pham</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="ask">Don\'t have an account?</string>
    <string name="buttonSignUp">SignUp</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="fp">Forgot Password ?</string>
    <string name="ask2">Already had account ?</string>
    <string name="buttonLogin">Login</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Username">Username</string>
    <string name="Address">Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="ResetP">Reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="About">About</string>
    <string name="logout">Log out</string>
    <string name="navigation_open">Open Navigation</string>
    <string name="navigation_close">Close Navigation</string>
    <string name="Header">Header</string>
    <string name="Cart">Cart</string>
    <string name="Favorites">Favorites</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search for cuisines</string>
    <string name="text1">What are you craving ?</string>
    <string name="burgers">Burgers</string>
    <string name="product_name">Product Name</string>
    <string name="price">From €12</string>
    <string name="deals">Deals</string>
    <string name="breakfast">Breakfast</string>
    <string name="discount">Discount</string>
    <string name="pho">Pho</string>
    <string name="des">Description</string>
    <string name="amount">5</string>
    <string name="orderHistory">Order History</string>
    <string name="feedback">Feedback</string>
</resources>