<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryMenu">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description"
        android:src="@drawable/food_image" />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LoginPanel"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_login"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="70dp"
        android:paddingRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Password"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="-25dp"
        android:background="@drawable/button_custom"
        android:text="@string/Login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/LoginPanel" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/LoginPanel"
        android:text="@string/buttonLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-40dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/LoginPanel"
        android:text="@string/buttonSignUp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:gravity="end"/>

</androidx.constraintlayout.widget.ConstraintLayout>