<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodorderapplication.ui.home.HomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.foodorderapplication.ui.home.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_deals"
        android:name="com.example.foodorderapplication.ui.home.DealsFragment"
        android:label="@string/deals"
        tools:layout="@layout/fragment_deals" />
</navigation>